--- a/templates/gitlab.rb.j2
+++ b/templates/gitlab.rb.j2
@@ -66,6 +66,9 @@ postgresql['shared_buffers'] = "1GB"
 
 ### GitLab NGINX
 nginx['redirect_http_to_https'] = true
+nginx['listen_addresses'] = ["0.0.0.0", "[::]"]
+registry_nginx['listen_addresses'] = ['*', '[::]']
+pages_nginx['listen_addresses'] = ['*', '[::]']
 
 ### GitLab Mattermost
 mattermost['enable'] = false
